--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./dist/src/index.js",
     "dev:rutine:backend": "ts-node-dev ./src/apps/rutine/backend/start.ts",
     "dev:rutine:frontend": "ts-node-dev ./src/apps/rutine/frontend/start.ts",
-    "lint": "tslint src/**/*.ts{,x}",
+    "lint": "eslint src/**/*.ts{,x}",
     "test": "jest",
     "build": "tsc"
   },
@@ -18,13 +18,21 @@
     "npm": ">=6.7.0"
   },
   "dependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/errorhandler": "1.5.0",
     "@types/express": "^4.17.11",
+    "@types/glob": "^7.2.0",
+    "@types/helmet": "0.0.48",
     "@types/node": "^14.14.34",
     "@types/uuid": "^8.3.0",
     "@types/uuid-validate": "0.0.1",
+    "compression": "^1.7.4",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "express-validator": "^6.10.0",
+    "helmet": "^4.4.1",
+    "http-status": "^1.5.0",
     "node-dependency-injection": "^2.6.11",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
@@ -34,15 +42,15 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
     "jest": "^26.6.3",
     "lint-staged": "10.5.4",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.3",
-    "ts-node-dev": "^1.1.6",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "~1.18.0",
-    "tslint-eslint-rules": "^5.4.0"
+    "ts-node-dev": "^1.1.6"
   },
   "husky": {
     "hooks": {
@@ -52,7 +60,7 @@
   "lint-staged": {
     "{src,tests}/**/*.ts": [
       "prettier --write",
-      "tslint --fix",
+      "eslint --fix",
       "git add"
     ]
   }
