--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/glob": "^7.2.0",
     "@types/helmet": "0.0.48",
     "@types/node": "^14.14.34",
+    "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.0",
     "@types/uuid-validate": "0.0.1",
     "compression": "^1.7.4",
@@ -34,6 +35,7 @@
     "helmet": "^4.4.1",
     "http-status": "^1.5.0",
     "node-dependency-injection": "^2.6.11",
+    "pg": "^8.7.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "uuid": "^8.3.2",
