--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "scripts": {
     "start": "node ./dist/src/index.js",
-    "dev:rutine:backend": "ts-node-dev ./src/apps/rutine/backend/start.ts",
-    "dev:rutine:frontend": "ts-node-dev ./src/apps/rutine/frontend/start.ts",
+    "dev:rutine:backend": "ts-node-dev ./src/apps/backend/start.ts",
+    "dev:rutine:frontend": "ts-node-dev ./src/apps/frontend/start.ts",
     "lint": "eslint src/**/*.ts{,x}",
-    "test": "jest",
+    "test": "jest --verbose",
     "build": "tsc"
   },
   "keywords": [],
@@ -43,13 +43,16 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "@types/random-words": "^1.1.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.12.0",
     "jest": "^26.6.3",
     "lint-staged": "10.5.4",
     "prettier": "^2.2.1",
+    "random-words": "^1.1.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.1.6"
