--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.9.0",
+    "html-to-image-v2": "^1.9.0",
     "html2canvas": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -33,6 +36,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.3",
     "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
