--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "downloadjs": "^1.4.7",
+    "html-to-image": "^1.9.0",
     "html-to-image-v2": "^1.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
